--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@
 # Visual Studio and Rider cache directory
 .vs/
 .idea/
-
+.vscode/
 # Gradle cache directory
 .gradle/
 
@@ -58,4 +58,5 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
 
